--- a/dist.ini
+++ b/dist.ini
@@ -2,11 +2,19 @@ name    = Search-Fulltext-Tokenizer-Ngram
 author  = Koichi SATOH <sekia@cpan.org>
 license = MIT
 copyright_holder = Koichi SATOH
-copyright_year   = 2013
+copyright_year   = 2014
 
-[@Basic]
-[AutoPrereqs]
-[CPANFile]
+[GatherDir]
+exclude_filename = README.md
+exclude_filename = dist.ini
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
 [NextRelease]
 format = %-7v %{yyyy-MM-dd}d
+[AutoPrereqs]
+[CPANFile]
+[GitHub::Meta]
+[PodWeaver]
+[ReadmeFromPod]
 [VersionFromModule]
