--- a/dist.ini
+++ b/dist.ini
@@ -4,17 +4,17 @@ license = MIT
 copyright_holder = Koichi SATOH
 copyright_year   = 2014
 
-[GatherDir]
-exclude_filename = README.md
-exclude_filename = dist.ini
-[@Filter]
--bundle = @Basic
--remove = GatherDir
+[@Basic]
 [NextRelease]
 format = %-7v %{yyyy-MM-dd}d
 [AutoPrereqs]
 [CPANFile]
 [GitHub::Meta]
 [PodWeaver]
+[PruneFiles]
+filename = README.md
+filename = dist.ini
+match = (?:^|/)\#
+match = ~$
 [ReadmeFromPod]
 [VersionFromModule]
